# illuminate

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
app/: main.cpp
include/illuminate/: illuminate.h
include/illuminate/core/: strid.h
include/illuminate/math/: math.h
include/illuminate/memory/: memory_allocation.h
include/illuminate/util/: hash_map.h  util_defines.h  util_functions.h
resource/: config.json  deferred.json  forward.json  material.json  material_category.json
resource/configs/: config_default.json  default_rendergraph.rpsl  default_rendergraph.rpsl.g.c  materials.json  render_graph_args.inl
resource/misc/: ArrayOf.natvis
resource/shader/: shader.test.hlsl
resource/shader/brdf/: brdf.hlsli  brdf_forward.ps.hlsl  brdf_geom.ps.hlsl  brdf_lighting.cs.h  brdf_lighting.cs.hlsl  gbuffer_geom.ps.hlsl
resource/shader/geom/: geom.vs.hlsl
resource/shader/include/: material_defines.hlsli  material_functions.hlsli  mesh_deform_defines.hlsli  mesh_transform_rootsig.hlsli  postprocess.hlsli  shader_defines.h  shader_functions.h
resource/shader/mesh_transform/: mesh_transform.buffers.hlsli  mesh_transform.hlsli  mesh_transform.vs.hlsl
resource/shader/postprocess/: fullscreen_triangle.vs.hlsl  linear_depth.cs.h  linear_depth.cs.hlsl  oetf.ps.hlsl  postprocess.hlsli  screen_space_shadow.cs.h  screen_space_shadow.cs.hlsl
resource/shader/test/: dispatch.cs.hlsl  output_to_swapchain.vs.ps.hlsl  pingong_a.ps.hlsl  pingong_bc.ps.hlsl  prez.hlsli  prez.ps.hlsl  prez.vs.hlsl  render_selected_buffer.ps.hlsl  shader.test.hlsl
resource/textures/: normal.dds  yellow.dds
src/: CMakeLists.txt  d3d12.cpp  header_common.h  memory_allocation.cpp  src_common.cpp  src_common.h  win32_dll_util_macro.h
src/core/: CMakeLists.txt  strid.cpp
src/d3d12/: CMakeLists.txt  d3d12_barriers.cpp  d3d12_barriers.h  d3d12_command_list.cpp  d3d12_command_list.h  d3d12_command_queue.cpp  d3d12_command_queue.h  d3d12_core_dll_version.cpp  d3d12_descriptors.cpp  d3d12_descriptors.h  d3d12_device.cpp  d3d12_device.h  d3d12_dxgi_core.cpp  d3d12_dxgi_core.h  d3d12_gpu_buffer_allocation.cpp  d3d12_gpu_buffer_allocation.h  d3d12_gpu_buffer_allocator.cpp  d3d12_gpu_buffer_allocator.h  d3d12_gpu_timestamp_set.cpp  d3d12_gpu_timestamp_set.h  d3d12_gpu_timestamps.cpp  d3d12_gpu_timestamps.h  d3d12_header_common.cpp  d3d12_header_common.h  d3d12_integration_test.cpp  d3d12_integration_test_cbuffers.inl  d3d12_json_parser.cpp  d3d12_json_parser.h  d3d12_material_category.cpp  d3d12_material_category.h  d3d12_memory_allocators.cpp  d3d12_memory_allocators.h  d3d12_render_graph.cpp  d3d12_render_graph.h  d3d12_render_graph_json_parser.cpp  d3d12_render_graph_json_parser.h  d3d12_resource_transfer.cpp  d3d12_resource_transfer.h  d3d12_resource_transferer.cpp  d3d12_resource_transferer.h  (+18 more)
src/d3d12/render_pass/: CMakeLists.txt  d3d12_render_pass_common.cpp  d3d12_render_pass_common.h  d3d12_render_pass_common_util.cpp  d3d12_render_pass_common_util.h  d3d12_render_pass_copy_resource.cpp  d3d12_render_pass_copy_resource.h  d3d12_render_pass_cs_dispatch.cpp  d3d12_render_pass_cs_dispatch.h  d3d12_render_pass_debug_render_selected_buffer.cpp  d3d12_render_pass_debug_render_selected_buffer.h  d3d12_render_pass_imgui.cpp  d3d12_render_pass_imgui.h  d3d12_render_pass_mesh_transform.cpp  d3d12_render_pass_mesh_transform.h  d3d12_render_pass_postprocess.cpp  d3d12_render_pass_postprocess.h  d3d12_render_pass_prez.h  d3d12_render_pass_util.cpp  d3d12_render_pass_util.h
src/math/: CMakeLists.txt  math.cpp
src/util/: CMakeLists.txt  hash_map.cpp  util_functions.cpp
tests/: CMakeLists.txt  memory_allocation.cpp  test_example.cpp  test_main.cpp
